working on activity page and modify the styling and text color etc
