# storage/api-docs/api-docs.json
@@ -690,6 +690,101 @@
                 ]
             }
         },
+        "/api/offer-letter/user": {
+            "get": {
+                "tags": [
+                    "Offer Letter"
+                ],
+                "summary": "Get offer letter for the authenticated user",
+                "operationId": "f331b93e0ccae97909a09c6860755d26",
+                "responses": {
+                    "200": {
+                        "description": "Offer letter fetched successfully.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "Success"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Offer letter fetched successfully."
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "status": {
+                                                    "type": "boolean",
+                                                    "example": true
+                                                },
+                                                "message": {
+                                                    "type": "string",
+                                                    "example": "Offer letter retrieved successfully"
+                                                },
+                                                "offerLetter": {
+                                                    "properties": {
+                                                        "id": {
+                                                            "type": "integer",
+                                                            "example": 1
+                                                        },
+                                                        "user_id": {
+                                                            "type": "integer",
+                                                            "example": 5
+                                                        },
+                                                        "job_title": {
+                                                            "type": "string",
+                                                            "example": "Security Guard"
+                                                        },
+                                                        "joining_date": {
+                                                            "type": "string",
+                                                            "format": "date",
+                                                            "example": "2024-05-01"
+                                                        },
+                                                        "salary": {
+                                                            "type": "string",
+                                                            "example": "18"
+                                                        },
+                                                        "description": {
+                                                            "type": "string",
+                                                            "example": "Job description here..."
+                                                        },
+                                                        "is_email_sent": {
+                                                            "type": "boolean",
+                                                            "example": true
+                                                        },
+                                                        "created_at": {
+                                                            "type": "string",
+                                                            "format": "date-time"
+                                                        },
+                                                        "updated_at": {
+                                                            "type": "string",
+                                                            "format": "date-time"
+                                                        }
+                                                    },
+                                                    "type": "object",
+                                                    "nullable": true
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/orientations": {
             "get": {
                 "tags": [
@@ -2172,6 +2267,10 @@
         {
             "name": "Numbers",
             "description": "Numbers"
+        },
+        {
+            "name": "Offer Letter",
+            "description": "Offer Letter"
         },
         {
             "name": "Orientations",
